    ** in DEFSTRUCT, a bare :CONC-NAME (or a :CONC-NAME with no
       argument) no longer signals an error;
    ** likewise in DEFSTRUCT, :CONC-NAME NIL now respects the package
       of the slot symbol, rather than using the current package
       ((:CONC-NAME "") continues to intern the slot's name in the
       current package);
  * incremented fasl file version number, because of the incompatible
    change to the DEFSTRUCT-DESCRIPTION structure, and again because
    of the new implementation of DEFINE-COMPILER-MACRO.

changes in sbcl-0.7.12 relative to sbcl-0.7.11:
  * minor incompatible change: code processed by the "interpreter" or
    EVAL now has a compilation optimization policy of (DEBUG 2)
    (changed from (DEBUG 1)) to improve debuggability of interactive
    development, and to allow the use of the debug RETURN command in
    such code.
  * an experimental implementation of the RETURN command for the
    debugger has been included.  (thanks to Frederik Kuivinen)
  * fixed bug 62: constraints were not propagated into a loop.
  * fixed bug in embedded calls of SORT (reported and investigated by
    Wolfgang Jenkner).

planned incompatible changes in 0.7.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, maybe in 0.7.x, maybe later, it might impact TRACE. They both
    encapsulate functions, and it's not clear yet how e.g. UNPROFILE
    will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are
    using profiling. If you never profile anything, TRACE should
    continue to behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.