@@ -855,6 +855,7 @@ retained, possibly temporariliy, because it might be used internally."
              "ABOUT-TO-MODIFY-SYMBOL-VALUE"
 	     "SYMBOL-SELF-EVALUATING-P"
              "PRINT-PRETTY-ON-STREAM-P"
+	     "ARRAY-READABLY-PRINTABLE-P"
              "LOOKS-LIKE-NAME-OF-SPECIAL-VAR-P"
              "POSITIVE-PRIMEP"
              "EVAL-IN-LEXENV"
