@@ -1494,6 +1494,9 @@ changes in sbcl-0.7.12 relative to sbcl-0.7.11:
   * fixed bug 62: constraints were not propagated into a loop.
   * fixed bug in embedded calls of SORT (reported and investigated by
     Wolfgang Jenkner).
+  * fixed bugs identified by Paul F. Dietz related to printing and
+    reading of arrays with some dimensions having length 0.  (thanks
+    to Gerd Moellmann)
 
 planned incompatible changes in 0.7.x:
   * (not done yet, but planned:) When the profiling interface settles
